# mlops-zoomcamp

./: .gitignore  .pre-commit-config.yaml  .pylintrc  project.toml  pyproject.toml
00-data-extraction/: get_datasets.py
01-intro/: duration-prediction.ipynb  duration-prediction.py
cohorts/2023/02-experiment-tracking/homework/: datahandler.py  datasetsplit.py  mlflowhelper.py  train_pipeline.py
